[AI-Assisted] docs(serialization): repair persistence guidance (#3137)
* docs(serialization): correct persistence and portability guidance

* docs(process): align persistence entry point

* test(docs): protect serialization contracts

* test(docs): tolerate wrapped serialization prose